Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
I have tested Pidgin-2.11.0 at r71956. It cannot connect to a google account (google talk). According to the log file, the problem seems to be that it uses to unimplemented functions
WARNING: DnsQuery_UTF8 at dll/win32/dnsapi/dnsapi/query.c:311 is UNIMPLEMENTED!
and also
err:(dll/win32/msafd/misc/dllmain.c:1576) Async Connect UNIMPLEMENTED!