[DNSAPI][DNSAPI_APITEST] Fix DnsQuery_UTF8 function and add tests

CORE-11634